{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 32,
  "lineage": "a9156e12-c20a-3e3c-ba1e-19235abfc9ee",
  "resources": [
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "servicequik-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0329b779e06db7754",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-237-13.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.237.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "servicequik-eip"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-067c761ab2c96b3dc",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-232-245.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.232.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "servicequik-eip"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d5ec8c09cf6f0a3f",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-119-137.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.119.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "servicequik-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "servicequik-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b84c6433cdbe5c3e",
            "arn": "arn:aws:ec2:ap-south-1:065409082096:instance/i-08ad136cfc0c3c0c0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ad136cfc0c3c0c0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099f89e5003474913",
            "private_dns": "ip-10-0-1-58.ap-south-1.compute.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-13-126-234-208.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.234.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b4880e19ff7e2f19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0454647149c826d00",
            "tags": {
              "Name": "servicequik-ec2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ec4482b644cf803"
            ]
          },
          "dependencies": [
            "module.servicequik_vpc.aws_subnet.servicequik-public-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b84c6433cdbe5c3e",
            "arn": "arn:aws:ec2:ap-south-1:065409082096:instance/i-0bda573a0de40ade8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bda573a0de40ade8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c79d73a86cf71b7",
            "private_dns": "ip-10-0-2-38.ap-south-1.compute.internal",
            "private_ip": "10.0.2.38",
            "public_dns": "ec2-13-232-44-113.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.44.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098595a1502a35875",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c545fb442622709b",
            "tags": {
              "Name": "servicequik-ec2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ec4482b644cf803"
            ]
          },
          "dependencies": [
            "module.servicequik_vpc.aws_subnet.servicequik-public-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "servicequik-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:internet-gateway/igw-06fb1e172be0a630f",
            "id": "igw-06fb1e172be0a630f",
            "owner_id": "065409082096",
            "tags": {
              "Name": "servicequik-ig"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "servicequik-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0329b779e06db7754",
            "id": "nat-0a574146467235bae",
            "network_interface_id": "eni-0c8cafc981109ea6a",
            "private_ip": "10.0.1.185",
            "public_ip": "65.1.237.13",
            "subnet_id": "subnet-0454647149c826d00",
            "tags": {
              "Name": "servicequik-nat-1"
            }
          },
          "dependencies": [
            "module.servicequik_vpc.aws_eip.servicequik-eip",
            "module.servicequik_vpc.aws_subnet.servicequik-public-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067c761ab2c96b3dc",
            "id": "nat-021ba2acbadc9fb31",
            "network_interface_id": "eni-08a862d7f79aacc70",
            "private_ip": "10.0.2.218",
            "public_ip": "65.1.232.245",
            "subnet_id": "subnet-0c545fb442622709b",
            "tags": {
              "Name": "servicequik-nat-2"
            }
          },
          "dependencies": [
            "module.servicequik_vpc.aws_eip.servicequik-eip",
            "module.servicequik_vpc.aws_subnet.servicequik-public-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5ec8c09cf6f0a3f",
            "id": "nat-0f38486b70265a757",
            "network_interface_id": "eni-07bc6c853d3bc176c",
            "private_ip": "10.0.3.200",
            "public_ip": "65.1.119.137",
            "subnet_id": "subnet-08dfcf8406ce08b0e",
            "tags": {
              "Name": "servicequik-nat-3"
            }
          },
          "dependencies": [
            "module.servicequik_vpc.aws_eip.servicequik-eip",
            "module.servicequik_vpc.aws_subnet.servicequik-public-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "servicequik-private-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:network-acl/acl-0d74d4af3028df2b2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "172.22.4.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0d74d4af3028df2b2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.22.4.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "065409082096",
            "subnet_ids": [],
            "tags": null,
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:network-acl/acl-08012014ded763a77",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "172.22.5.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-08012014ded763a77",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.22.5.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "065409082096",
            "subnet_ids": [],
            "tags": null,
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:network-acl/acl-02b835ebe6ca250f3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "172.22.6.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-02b835ebe6ca250f3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.22.6.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "065409082096",
            "subnet_ids": [],
            "tags": null,
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "servicequik-public-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:network-acl/acl-03fb05f514e20c661",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "172.22.1.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-03fb05f514e20c661",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.22.1.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "065409082096",
            "subnet_ids": [],
            "tags": null,
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:network-acl/acl-0c93b67ed2b128c9a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "172.22.2.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0c93b67ed2b128c9a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.22.2.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "065409082096",
            "subnet_ids": [],
            "tags": null,
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:network-acl/acl-0d46c9ebd8f59a5d9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "172.22.3.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0d46c9ebd8f59a5d9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.22.3.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "065409082096",
            "subnet_ids": [],
            "tags": null,
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:route-table/rtb-0c65db30d32b8c84f",
            "id": "rtb-0c65db30d32b8c84f",
            "owner_id": "065409082096",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "servicequik-private"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:route-table/rtb-00c7ef84cf7fd953f",
            "id": "rtb-00c7ef84cf7fd953f",
            "owner_id": "065409082096",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fb1e172be0a630f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "servicequik-public"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_internet_gateway.servicequik-igw",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "servicequik-aso-pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ddc5371352445f4",
            "route_table_id": "rtb-0c65db30d32b8c84f",
            "subnet_id": "subnet-08f425c1f86d74b42"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_route_table.private-rt",
            "module.servicequik_vpc.aws_subnet.servicequik-private-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c14e19b65d8523b1",
            "route_table_id": "rtb-0c65db30d32b8c84f",
            "subnet_id": "subnet-00cd52be3c66a9d3d"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_route_table.private-rt",
            "module.servicequik_vpc.aws_subnet.servicequik-private-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdf4ea94a69b0474",
            "route_table_id": "rtb-0c65db30d32b8c84f",
            "subnet_id": "subnet-0de463a468348a911"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_route_table.private-rt",
            "module.servicequik_vpc.aws_subnet.servicequik-private-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "servicequik-aso-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d64950c511b3977",
            "route_table_id": "rtb-00c7ef84cf7fd953f",
            "subnet_id": "subnet-0454647149c826d00"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_internet_gateway.servicequik-igw",
            "module.servicequik_vpc.aws_route_table.public-rt",
            "module.servicequik_vpc.aws_subnet.servicequik-public-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cd84d7ad96e395a",
            "route_table_id": "rtb-00c7ef84cf7fd953f",
            "subnet_id": "subnet-0c545fb442622709b"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_internet_gateway.servicequik-igw",
            "module.servicequik_vpc.aws_route_table.public-rt",
            "module.servicequik_vpc.aws_subnet.servicequik-public-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d71b8620b1d0a07",
            "route_table_id": "rtb-00c7ef84cf7fd953f",
            "subnet_id": "subnet-08dfcf8406ce08b0e"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_internet_gateway.servicequik-igw",
            "module.servicequik_vpc.aws_route_table.public-rt",
            "module.servicequik_vpc.aws_subnet.servicequik-public-subnet",
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "servicequik-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:security-group/sg-0d7201eba9cca849c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0d7201eba9cca849c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210408115922717900000001",
            "name_prefix": "terraform-",
            "owner_id": "065409082096",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "servicequik-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "servicequik-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:subnet/subnet-08f425c1f86d74b42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08f425c1f86d74b42",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065409082096",
            "tags": {
              "Name": "servicequik-pri-subnet-1"
            },
            "tags_all": {
              "Name": "servicequik-pri-subnet-1"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:subnet/subnet-00cd52be3c66a9d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-00cd52be3c66a9d3d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065409082096",
            "tags": {
              "Name": "servicequik-pri-subnet-2"
            },
            "tags_all": {
              "Name": "servicequik-pri-subnet-2"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:subnet/subnet-0de463a468348a911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0de463a468348a911",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065409082096",
            "tags": {
              "Name": "servicequik-pri-subnet-3"
            },
            "tags_all": {
              "Name": "servicequik-pri-subnet-3"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "servicequik-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:subnet/subnet-0454647149c826d00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0454647149c826d00",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065409082096",
            "tags": {
              "Name": "servicequik-pub-subnet-1"
            },
            "tags_all": {
              "Name": "servicequik-pub-subnet-1"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:subnet/subnet-0c545fb442622709b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c545fb442622709b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065409082096",
            "tags": {
              "Name": "servicequik-pub-subnet-2"
            },
            "tags_all": {
              "Name": "servicequik-pub-subnet-2"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:subnet/subnet-08dfcf8406ce08b0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08dfcf8406ce08b0e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065409082096",
            "tags": {
              "Name": "servicequik-pub-subnet-3"
            },
            "tags_all": {
              "Name": "servicequik-pub-subnet-3"
            },
            "vpc_id": "vpc-08a617d65ec6da60f"
          },
          "dependencies": [
            "module.servicequik_vpc.aws_vpc.servicequik"
          ]
        }
      ]
    },
    {
      "module": "module.servicequik_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "servicequik",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065409082096:vpc/vpc-08a617d65ec6da60f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031cd90f526905ba6",
            "default_route_table_id": "rtb-0f63bcd9d1bc1ca9b",
            "default_security_group_id": "sg-05ec4482b644cf803",
            "dhcp_options_id": "dopt-5b977b30",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08a617d65ec6da60f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f63bcd9d1bc1ca9b",
            "owner_id": "065409082096",
            "tags": {
              "Name": "servicequik"
            },
            "tags_all": {
              "Name": "servicequik"
            }
          }
        }
      ]
    }
  ]
}